language/move-lang/tests/move_check/translated_ir_tests/borrow_tests/borrow_global_bad0.exp
error: 

   ┌── tests/move_check/translated_ir_tests/borrow_tests/borrow_global_bad0.move:7:17 ───
   │
 7 │         let x = borrow_global_mut<T>(sender);
   │                 ---------------------------- It is still being mutably borrowed by this reference
 8 │         copy x;
 9 │         x = borrow_global_mut<T>(sender);
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'T'
   │

